--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(RISC-V-SIMULATOR)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "-Wall -O3 -std=c++11 -g")
 
-add_executable(code src/main.cpp)
+add_executable(code main.cpp)
